using yaml front matter
which are variables that templating engine is gone  process in diffrent pages

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE >
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-hi jekyll
-</body>
-</html>
+---
+layout: default
+title: I'm the title
+body : new body served from vars
+---
